[gd_scene load_steps=10 format=3 uid="uid://khw8t0vjpyy1"]

[ext_resource type="Script" path="res://Scenes/emitter.gd" id="1_slaqx"]
[ext_resource type="Texture2D" uid="uid://bbmqivx0w0dw8" path="res://enemyUFO.png" id="1_y8poc"]
[ext_resource type="Texture2D" uid="uid://bmuqcjcihskfc" path="res://BlueCircleTransparent.png" id="4_iq1jg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vgv5i"]

[sub_resource type="GDScript" id="GDScript_dlmjg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u5g58"]

[sub_resource type="Animation" id="Animation_5im1f"]
resource_name = "expand_circle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScanArea/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.005, 0.005), Vector2(0.01, 0.01), Vector2(0.015, 0.015), Vector2(0.02, 0.02), Vector2(0.025, 0.025), Vector2(0.03, 0.03), Vector2(0.035, 0.035), Vector2(0.039, 0.039)]
}

[sub_resource type="Animation" id="Animation_tud7f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScanArea/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cexgy"]
_data = {
"RESET": SubResource("Animation_tud7f"),
"expand_circle": SubResource("Animation_5im1f")
}

[node name="Emitter" type="StaticBody2D" groups=["Emitters"]]
scale = Vector2(0.25, 0.25)
collision_layer = 2
script = ExtResource("1_slaqx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(4.7, 4.7)
shape = SubResource("CircleShape2D_vgv5i")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_y8poc")

[node name="ScanArea" type="Area2D" parent="."]
scale = Vector2(50, 50)
collision_layer = 2
script = SubResource("GDScript_dlmjg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScanArea"]
shape = SubResource("CircleShape2D_u5g58")

[node name="Sprite2D" type="Sprite2D" parent="ScanArea"]
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_iq1jg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "expand_circle"
libraries = {
"": SubResource("AnimationLibrary_cexgy")
}

[connection signal="body_entered" from="ScanArea" to="." method="_on_scan_area_body_entered"]
[connection signal="body_exited" from="ScanArea" to="." method="_on_scan_area_body_exited"]
